tests/NormalTests/paczka1/fuzzy1/64671060.err
Error in line 1: KwCHhlO A355 5,5
Error in line 8: 3JbpgS A141 95,4
Error in line 15: 4qrEN A355 79,8
Error in line 18: A970 A141 20,65
Error in line 22: 1W8SHq2gd S821 34,7
Error in line 32: ZCj5JX A141 11n,n
Error in line 31: 4qrEN S821 0,1
Error in line 37: wqBa2JhG A355 52,7
